@@ -1,3 +1,10 @@
+2009-01-14 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/utils_dnd.c, src/gimv_thumb_view_album.c, src/gimv_thumb_win.[ch],
+	  src/gimv_dir_view.c, src/gimv_thumb_view.c:
+	Avoid some crash bugs caused by GtkNotebook's drag feature.
+	Remove needless codes.
+
 2009-01-13 Takuro Ashie <ashie@homa.ne.jp>
 
 	* configure.ac, plugins/image_loader/Makefile.am,
